templates/policies/disable.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: disable
spec:
  mtls:
    mode: DISABLE
