templates/policies/mutual.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: permissive
spec:
  mtls:
    mode: PERMISSIVE
