templates/policies/strict.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: strict
spec:
  mtls:
    mode: STRICT
